--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.mycompany.ajedrez.Ajedrez</exec.mainClass>
+        <exec.mainClass>com.mycompany.ajedrezz.Ajedrezz</exec.mainClass>
     </properties>
+    <name>Ajedrez</name>
 </project>
